packages/melody-compiler/__tests__/__fixtures__/success/extends_with_context.template
{% set foo = "bar" %}
{% extends "parent.twig" %}

{% block hello %}
    <div key="1" class="test">
        {{ message }}
    </div>
{% endblock %}
