packages/melody-compiler/__tests__/__fixtures__/error/wrong_include.template
<div>
  {% include "./path/#{template}" %}
</div>
